--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,15 @@
 @tailwind utilities;
 
 input,
-textarea {
+textarea,
+select {
     @apply border border-gray-300 rounded-md px-1 w-full;
     @apply mb-2;
 }
 
 input:focus,
-textarea:focus {
+textarea:focus,
+select:focus {
     @apply border-blue-900;
 }
 
