--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 input,
 textarea,
 select {
-    @apply border border-gray-300 rounded-md px-1 w-full;
+    @apply border border-gray-200 rounded-sm w-full py-2 px-3;
     @apply mb-2;
 }
 
@@ -16,36 +16,36 @@ select:focus {
 }
 
 h1 {
-    @apply text-blue-900 mb-2 text-xl;
+    @apply text-gray-800 mb-4 text-xl;
 }
 img {
     max-height: 100%;
 }
 label {
-    @apply text-blue-900;
+    @apply text-gray-600 text-sm;
 }
 .btn-primary {
-    @apply bg-blue-900 text-white px-4 rounded-md py-1;
+    @apply bg-primary text-white px-4 rounded-sm py-1 shadow-sm;
 }
 table.basic {
-    @apply w-full;
+    @apply w-full bg-white rounded-sm shadow-md;
 }
 table.basic thead tr td {
-    @apply bg-blue-100;
+    @apply text-sm text-gray-600 uppercase border-b border-gray-200 px-4 py-2;
 }
 table.basic tr td {
-    @apply border border-blue-200 p-1;
+    @apply px-4 py-1;
 }
 table.basic a {
-    @apply bg-blue-900 text-white text-sm py-1 rounded-md px-2 inline-flex gap-1 mr-1;
+    @apply px-4 rounded-sm text-sm py-1 inline-flex mx-1 items-center gap-1;
 }
 .btn-default,
 .btn-red {
     @apply px-4 py-1 rounded-md;
 }
 .btn-red {
-    @apply bg-red-800 text-white;
+    @apply bg-red-200 text-red-600 px-4 py-1 rounded-sm shadow-sm;
 }
 .btn-default {
-    @apply bg-gray-500 text-white;
+    @apply text-gray-800 px-4 rounded-sm py-1 bg-white border border-gray-200 shadow-sm;
 }
